Bug 335904 - NO_LINK_TO_PLASMA option non-operational
Summary: NO_LINK_TO_PLASMA option non-operational
Status: RESOLVED FIXED
Alias: None
Product: plasma-mediacenter
Classification: Unmaintained
Component: Shell (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR grave
Target Milestone: ---
Assignee: Sinny Kumari
URL:
Keywords:
: 337458 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-06 20:59 UTC by Hrvoje Senjan
Modified: 2014-08-28 12:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to resolve the problem (3.51 KB, text/plain)
2014-08-28 05:22 UTC, Hrvoje Senjan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2014-06-06 20:59:23 UTC
testing with openSUSE Factory, where we switched to gstreamer 1.0 (except QtMultimedia)
we need there to build with the mentioned option, however PMC can't find relevant Plasma packages it seems:

PLASMA_ADAPTER: Setting Oxygen Plasma theme and loading resources... 
Failed to load Plasma Libraries, cannot continue.
KCrash: Application 'plasma-mediacenter' crashing...
KCrash: Attempting to start /usr/lib64/kde4/libexec/drkonqi from kdeinit
sock_file=/home/hrvoje/.kde4/socket-shumarija/kdeinit4__0
unnamed app(26486): Communication problem with  "plasma-mediacenter" , it probably crashed. 
Error message was:  "org.freedesktop.DBus.Error.NoReply" : " "Message did not receive a reply (timeout by message bus)" "

Reproducible: Always
Comment 1 Hrvoje Senjan 2014-06-06 21:02:10 UTC
forgot to mention, this is with 1.2.90.
Comment 2 Bhushan Shah 2014-06-07 18:19:53 UTC
Git commit 6663a31f993d4d2c77c5786b7ffc4b69b1c52d18 by Bhushan Shah.
Committed on 07/06/2014 at 23:47.
Pushed by bshah into branch 'master'.

Also bump soversion of plasmaadapter.so

M  +1    -1    libs/plasmaadapter/CMakeLists.txt

http://commits.kde.org/plasma-mediacenter/6663a31f993d4d2c77c5786b7ffc4b69b1c52d18
Comment 3 Hrvoje Senjan 2014-06-10 11:02:42 UTC
need to re-open. in my local testing with above commit i did not pass NO_LINK_TO_PLASMA  (facepalm)
Comment 4 Bhushan Shah 2014-06-10 11:30:32 UTC
diff --git a/shells/newshell/mainwindow.cpp b/shells/newshell/mainwindow.cpp
index 3c888f8..5c14eda 100644
--- a/shells/newshell/mainwindow.cpp
+++ b/shells/newshell/mainwindow.cpp
@@ -227,6 +227,7 @@ bool MainWindow::loadThemeAndPopulateMainscriptAndImagesPath(QString& mainscript
     QStringPrototype getImagesPath = (QStringPrototype) plasmaAdapterLib.resolve("getImagesPath");
 
     if (!plasmaAdapterLib.isLoaded()) {
+        qDebug() << plasmaAdapterLib.errorString();
         return false;
     }


With this can you check what error it prints?
Comment 5 Jonathan Riddell 2014-07-01 13:14:12 UTC
My co-packager had this problem while building the package but turned out she just didn't have libplasmaadapter.so.1.3 installed, so make sure you have it installed
Comment 6 Bhushan Shah 2014-08-22 05:52:17 UTC
*** Bug 337458 has been marked as a duplicate of this bug. ***
Comment 7 Bhushan Shah 2014-08-22 12:41:28 UTC
Git commit 97197e3e6f0752803a32e3e58b0b1b8a32a34362 by Bhushan Shah.
Committed on 22/08/2014 at 12:39.
Pushed by bshah into branch 'master'.

Add more debug to see why it is failing to load plasma libs

M  +1    -0    shells/newshell/mainwindow.cpp

http://commits.kde.org/plasma-mediacenter/97197e3e6f0752803a32e3e58b0b1b8a32a34362
Comment 8 Bhushan Shah 2014-08-22 12:42:10 UTC
Those having this problems can rebuild with this commit and can give me output of plasma-mediacenter?
Comment 9 Hrvoje Senjan 2014-08-28 05:22:36 UTC
Created attachment 88462 [details]
Patch to resolve the problem

(In reply to Jonathan Riddell from comment #5)
> My co-packager had this problem while building the package but turned out
> she just didn't have libplasmaadapter.so.1.3 installed, so make sure you
> have it installed

turns out the problem is not in 'missing' libplasmaadapter.so.1.3, but rather libplasmaadapter.so (i.e. the devel symlink). IOW only for distros that split the package to main, and devel one will the issue happen. Attached patched should fixed that (haven't tried yet whether it builds...)
Comment 10 Hrvoje Senjan 2014-08-28 12:42:48 UTC
Git commit 65faa0886ca70baa531c0f2a4e5c3610bec8759e by Hrvoje Senjan.
Committed on 28/08/2014 at 12:41.
Pushed by hrvojes into branch 'master'.

Avoid dlopening plasmaadapter's devel symlink

Some distro's have PMC splitted to main and devel subpackage,
in that case the lib to dlopen was not available to users w/o devel
package installed, and made the bug exposed to them.

REVIEW: 119964

M  +5    -0    CMakeLists.txt
A  +3    -0    config-plasma-mediacenter.h.cmake
M  +1    -1    libs/mediacenter/CMakeLists.txt
M  +1    -1    libs/plasmaadapter/CMakeLists.txt
M  +1    -1    shells/newshell/CMakeLists.txt
M  +3    -1    shells/newshell/mainwindow.cpp

http://commits.kde.org/plasma-mediacenter/65faa0886ca70baa531c0f2a4e5c3610bec8759e