Avoid dlopening plasmaadapter's devel symlink

Some distro's have PMC splitted to main and devel subpackage,
in that case the lib to dlopen was not available to users w/o devel
package installed, and made the bug exposed to them.

REVIEW: 119964
BUG: 335904